--- a/src/views/index.html
+++ b/src/views/index.html
@@ -17,7 +17,7 @@
                         <h2 class="title mb-40">
                             О нас
                         </h2>
-                        <div class="text">
+                        <div class="editor">
                             <p>
                                 Рекламно производственная компания “Ракета” располагает обширными рекламно-производственными возможностями. Над вашими проектами трудится команда молодых, амбициозных, нацеленных на результат специалистов своего дела.
                             </p>
@@ -45,7 +45,7 @@
                                     <use xlink:href="img/sprites/sprite.svg#icon-why-speed"></use>
                                 </svg>
                                 <div class="front-fact__content">
-                                    <div class="text">
+                                    <div class="editor">
                                         <h2>
                                             Скорость
                                         </h2>
@@ -54,16 +54,16 @@
                                                 Отвечаем на письма за <strong>10</strong> минут
                                             </li>
                                             <li>
-                                                 Берем трубку в течение <strong>5</strong> гудков
+                                                Берем трубку в течение <strong>5</strong> гудков
                                             </li>
                                             <li>
-                                                 Выезжаем на встречу в течение дня
+                                                Выезжаем на встречу в течение дня
                                             </li>
                                         </ul>
                                     </div>
                                 </div>
                             </div>
-                            
+
                         </div>
                         <div class="articles__item articles__item--33">
                             <div class="front-fact">
@@ -71,7 +71,7 @@
                                     <use xlink:href="img/sprites/sprite.svg#icon-why-time"></use>
                                 </svg>
                                 <div class="front-fact__content">
-                                    <div class="text">
+                                    <div class="editor">
                                         <h2>
                                             Сроки
                                         </h2>
@@ -80,7 +80,7 @@
                                                 Дизайн и смету делаем до <strong>2-х</strong> дней
                                             </li>
                                             <li>
-                                                 Изготавливаем вывеску от <strong>5</strong> до <strong>10</strong> рабочих дней
+                                                Изготавливаем вывеску от <strong>5</strong> до <strong>10</strong> рабочих дней
                                             </li>
                                         </ul>
                                     </div>
@@ -93,7 +93,7 @@
                                     <use xlink:href="img/sprites/sprite.svg#icon-why-quality"></use>
                                 </svg>
                                 <div class="front-fact__content">
-                                    <div class="text">
+                                    <div class="editor">
                                         <h2>
                                             Качество
                                         </h2>
@@ -127,7 +127,7 @@
                         <h2 class="title mb-40">
                             Производство рекламы
                         </h2>
-                        <div class="text">
+                        <div class="editor">
                             <p>
                                 Мы работаем в производстве рекламы больше 10 лет и знаем обо всех нюансах этой сферы.
                                 Мы все делаем собственными силами, поэтому отвечаем за разумность цен, качество изделий и сроки исполнения заказов.
@@ -150,7 +150,7 @@
                 <h2 class="title mb-40">
                     Акции
                 </h2>
-                <div class="text mb-60">
+                <div class="editor mb-60">
                     <p>
                         Мы регулярно проводим различные акции для наших клиентов. <br>
                         Заказывайте рекламу выгодно!
@@ -256,7 +256,11 @@
             </div>
         </section>
     </main>
-    @@include("../blocks/modules/footer/footer.html")
+    <footer class="section section--footer">
+        <div class="container">
+            @@include("../blocks/modules/footer/footer.html")
+        </div>
+    </footer>
     @@include("../blocks/modules/demo/demo.html")
     <script src="js/main.js"></script>
     <script src="js/vendor.js"></script>
