--- a/src/blocks/_modules.scss
+++ b/src/blocks/_modules.scss
@@ -7,11 +7,17 @@
 @import "modules/header/header";
 @import "modules/header-top/header-top";
 @import "modules/header-bottom/header-bottom";
+@import "modules/breadcrumbs/breadcrumbs";
 @import "modules/footer/footer";
+@import "modules/editor/editor";
+@import "modules/footer-social/footer-social";
 @import "modules/title/title";
 @import "modules/btn/btn";
 @import "modules/text/text";
 @import "modules/img/img";
+
+@import "modules/preview-work/preview-work";
+@import "modules/product-ad/product-ad";
 
 @import "modules/intro-slider/intro-slider";
 @import "modules/front-fact/front-fact";
