--- a/src/blocks/modules/btn/btn.scss
+++ b/src/blocks/modules/btn/btn.scss
@@ -21,4 +21,13 @@
 		background-color: $orange;
 		color: $light;
 	}
+	&--download {
+		padding: 0;
+		color: $orange;
+	}
+	&__icon-download {
+		width: rem(48);
+		height: rem(48);
+		margin-right: rem(8);
+	}
 }
