--- a/src/blocks/modules/columns/columns.scss
+++ b/src/blocks/modules/columns/columns.scss
@@ -1,15 +1,24 @@
 .columns {
 	display: flex;
 	justify-content: space-between;
+	&--center {
+		align-items: center;
+	}
 	&__column {
+		&--3 {
+			width: calc(100% / 12 * 3 - 10px);
+		}
+		&--4 {
+			width: calc(100% / 12 * 4 - 10px);
+		}
 		&--6 {
 			width: calc(50% - 10px);
 		}
 		&--8 {
 			width: calc(100% / 12 * 8 - 10px);
 		}
-		&--4 {
-			width: calc(100% / 12 * 4 - 10px);
+		&--9 {
+			width: calc(100% / 12 * 9 - 10px);
 		}
 	}
 }
