--- a/src/blocks/modules/img/img.scss
+++ b/src/blocks/modules/img/img.scss
@@ -1,7 +1,12 @@
 .img {
 	display: block;
+	max-width: 100%;
 	&--center {
 		margin-left: auto;
 		margin-right: auto;
+	}
+	&--full {
+		width: 100%;
+		height: auto;
 	}
 }
