--- a/src/blocks/_modules.scss
+++ b/src/blocks/_modules.scss
@@ -13,6 +13,7 @@
 @import "modules/footer-social/footer-social";
 @import "modules/title/title";
 @import "modules/btn/btn";
+@import "modules/select/select";
 @import "modules/text/text";
 @import "modules/img/img";
 
