--- a/src/blocks/modules/btn/btn.scss
+++ b/src/blocks/modules/btn/btn.scss
@@ -4,10 +4,15 @@
 	align-items: center;
 	text-decoration: none;
 	font-weight: 600;
-	border-radius: 50px;
-	padding: 19px 56px;
+	border-radius: rem(50);
+	padding: rem(19) rem(56);
+	cursor: pointer;
+	transition: 0.3s all;
 	&:hover {
 		opacity: 0.7;
+	}
+	&--small {
+		height: rem(50);
 	}
 	&--head {
 		height: rem(50);
@@ -25,9 +30,22 @@
 		padding: 0;
 		color: $orange;
 	}
+	&--tab {
+		border: 2px solid $orange;
+		background: none; 
+	}
+	&--tab-active {
+		background-color: $orange;
+		color: $light;
+	}
 	&__icon-download {
 		width: rem(48);
 		height: rem(48);
 		margin-right: rem(8);
+	}
+	&__icon-load {
+		width: rem(22);
+		height: rem(22);
+		margin-left: rem(10);
 	}
 }
